--- a/chat_app/templates/chat_app/logIn.html
+++ b/chat_app/templates/chat_app/logIn.html
@@ -8,10 +8,10 @@
 
 {% block content %}
 <div class="container">
-	<form class="form-login" role="form">
+	<form action="" method="POST" class="form-login" role="form">{% csrf_token %}
 		<h2 class="form-login-heading">Iniciar Sesión</h2>
-		<input type="email" class="form-control" placeholder="Email" required="" autofocus="">
-		<input type="password" class="form-control" placeholder="Contraseña" required="">
+		<input name="username" type="text" class="form-control" placeholder="Usuario" required="" autofocus="">
+		<input name="password" type="password" class="form-control" placeholder="Contraseña" required="">
 		<label class="checkbox">
 			<input type="checkbox" value="remember-me"> Recordarme
 		</label>
