--- a/chat_app/templates/chat_app/signUp.html
+++ b/chat_app/templates/chat_app/signUp.html
@@ -13,7 +13,7 @@
 {% block content %}
 <div class="container">
 	{% if user.is_authenticated %}
-	<p>Termine la sesión pare registrar un usuario nuevo</p>
+	<p>Termine la sesión para registrar un usuario nuevo</p>
 
 	{% else %}
 		{% if registered = True %}	
