--- a/chat_app/static/css/base.css
+++ b/chat_app/static/css/base.css
@@ -130,6 +130,12 @@ body {
   margin-top: 10px;
 }
 
+/* modals------------------------- */
+.modal-body {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
 
 /* FOOTER ------------------------ */
 
