--- a/chat_app/templates/chat_app/home.html
+++ b/chat_app/templates/chat_app/home.html
@@ -12,8 +12,8 @@
 			<span class="sr-only">Toggle Dropdown</span>
 		</button>
 		<ul class="dropdown-menu" role="menu">
-			<li><a href="#">Agregar</a></li>
-			<li><a href="#">Eliminar</a></li>
+			<li><a href="#modalAddFriends" data-toggle="modal">Agregar</a></li>
+			<li><a href="#modalDeleteFriends" data-toggle="modal">Eliminar</a></li>
 			<li class="divider"></li>
 			<li><a href="#">Listar amigos</a></li>
 		</ul>
@@ -123,5 +123,49 @@
 		<section class="col-md-4"></section>
 
 	</div>
+</div>
+
+<!-- Modal Add Friends -->
+<div class="modal fade" id="modalAddFriends" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Agregar amigos</h4>
+      </div>
+      <div class="modal-body">
+	      {% for registered_user in registered_users %}
+	      <input type="checkbox" name="registered_users" id="option{{registered_user.id}}" value="{{registered_user.username}}">
+	      <label for="option{{registered_user.id}}"><b>{{registered_user.username}}</b></label><br/>
+	      {% endfor %}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Agregar a amigos</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Delete Friends -->
+<div class="modal fade" id="modalDeleteFriends" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Eliminar amigos</h4>
+      </div>
+      <div class="modal-body">
+	      {% for friend in user.get_profile.friends.all %}
+	      <input type="checkbox" name="friends" id="option{{friend.id}}" value="{{friend.user.username}}">
+	      <label for="option{{friend.id}}"><b>{{friend.user.username}}</b></label><br/>
+	      {% endfor %}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Eliminar de amigos</button>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
