Actualizando a Red Academica

--- a/templates/chat_app/base_site.html
+++ b/templates/chat_app/base_site.html
@@ -26,12 +26,13 @@
   <footer>    
     <nav class="navbar navbar-down" role="navigation">
       <div class="container">
-        <div>2014 © Chat</div>        
+        <div>2014 © Universidad Distrital Francisco José de Caldas - Bogotá D.C - República de Colombia</div>        
       </div>
     </nav>        
   </footer>
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
+  <script src="/static/js/script.js"></script>
 </body>
 </html>
 
